Fix alerts buttons display on mobile

--- a/client/css/sections/settings/all.css
+++ b/client/css/sections/settings/all.css
@@ -30,6 +30,7 @@
 
 .settings-form .buttons-toolbar {
     justify-content: flex-end;
+    flex-wrap: wrap;
 }
 
 .settings-form .buttons-toolbar > * {
